se realiza el ajuste para filtrado de polizas por cliente numero de poliza y tipo, se agrega en el formulario de nueva poliza el campo numero de poliza, se ajusta para los clientes ver poliza y solo muestra la poliza del cliente, ya no muestra todo el listado